<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:title="@string/inbox"
            android:id="@+id/item1_id"
            android:icon="@drawable/inbox">

        </item>
        <item
            android:title="@string/starred"
            android:id="@+id/item2_id"
            android:icon="@drawable/star"/>
        <item
            android:title="@string/sent_mail"
            android:id="@+id/item3_id"
            android:icon="@drawable/send"/>
        <item
            android:title="@string/drafts"
            android:id="@+id/item4_id"
            android:icon="@drawable/emailopen"/>






    </group>
    <item android:title="@string/subheader">
        <menu>

            <item
                android:title="@string/all_mail"
                android:id="@+id/all_mail"
                android:icon="@drawable/email">

            </item>

            <item
                android:icon="@drawable/delete"
                android:title="@string/delete"

                android:id="@+id/trash_id"/>
            <item
                android:title="@string/spam"
                android:id="@+id/spam_id"
                android:icon="@drawable/alert"/>

        </menu>





    </item>



</menu>